--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -8,80 +8,96 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>TITLE</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-    <title> Title Here </title>
+    <title> Twitch Channel Status </title>
 
     <!-- JQUERY -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"></script>
 
-    <!-- Custom JS
-    <script src = ""></script>
-    <script src = ""></script>
-    -->
+      <!-- Foundation & Modernizr -->
+      <script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css" />
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 
-    <!-- BOOTSTRAP -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <!--Font Awesome-->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <!-- Custom JS & CSS -->
+      <script src = "C:\Users\Adam's Laptop\Google Drive\JSProjects\TwitchApp\TwitchAppJS.js"></script>
+      <link rel="stylesheet" href="C:\Users\Adam's Laptop\Google Drive\JSProjects\TwitchApp\TwitchAppCSS.css">
 
-    <!--Custom CSS
-    <link rel="stylesheet" href="C:\Users\Adam's Laptop\Google Drive\Javascript Projects\Wiki Search\WikiSearchCSS.css">
-    -->
+      <!-- Fonts -->
+      <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
 
   </head>
 
   <body>
 
 
-  <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-2 text-center menu">
-          </div>
-          <div class="col-sm-2 menu text-center">
-          </div>
-          <div class="col-sm-4 menu">
-            <h1 class = "row text-center"> Page H1 <h1>
-          </div>
-          <div class="col-sm-3 menu">
-          </div>
-        </div>
-  </div>
-
-
-
-      <div class="container-fluid">
-          <div class = "row text-center">
-            <div class = "col-xs-5">
-            </div>
-            <div id="icon" class = "col-xs-2">
-              Search, Icon, etc.
-            </div>
-          </div>
-            <div class = "col-xs-5">
-            </div>
-          </div>
+    <br>
+    <br>
+    <div class="row">
+      </div class="small-12 columns">
+        <h1 class="text-center"> Twitch Channel Status </h1>
       </div>
+    </div>
+    <br>
+    <br>
 
+  <!-- Using Foundation ROW That Adjusts With Screen Size-->
+    <div class="row">
+        <div class="small-2 columns">
+        </div>
+        <div id="#" class="small-8 columns">
+        </div>
+        <div class="small-2 columns">
+        </div>
+    </div>
+    <br>
 
-      <!-- SOCIAL ICONS   -->
-      <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-4 text-center menu">
-                    <a href="https://github.com/collabitron"> <i class="fa fa-github fa-5x"></i><a/>
-                </div>
-                <div class="col-sm-4 text-center menu">
-                    <a href="http://codepen.io/AJSIM/"><i class="fa fa-codepen fa-5x"></i><a/>
-                </div>
-                <div class="col-sm-4 text-center menu">
-                    <a href="https://adamsimonini.com/"><i class="fa fa-user-o fa-5x"></i><a/>
-                </div>
+  <!-- Display Results of Search in Columns-->
+    <div class="row text-center">
+      <div id="keyword1" class="small-2 columns"></div>
+      <div id="description1" class="small-8 columns"></div>
+      <div class="small-2 columns"></div>
+    </div>
+    <div class="row text-center">
+      <div id="keyword2" class="small-2 columns"></div>
+      <div id="description2" class="small-8 columns"></div>
+      <div class="small-2 columns"></div>
+    </div>
+    <div class="row text-center">
+      <div id="keyword3" class="small-2 columns"></div>
+      <div id="description3" class="small-8 columns"></div>
+      <div class="small-2 columns"></div>
+    </div>
+    <div class="row text-center">
+      <div id="keyword4" class="small-2 columns"></div>
+      <div id="description4" class="small-8 columns"></div>
+      <div class="small-2 columns"></div>
+    </div>
+    <div class="row text-center">
+      <div id="keyword5" class="small-2 columns"></div>
+      <div id="description5" class="small-8 columns"></div>
+      <div class="small-2 columns"></div>
+    </div>
 
+  <!-- SOCIAL ICONS   -->
+      <div class="row">
+            <div class="small-4 text-center small columns menu">
+              <a href="https://github.com/collabitron"> <i class="fa fa-github fa-5x FA_Icon" ></i><a/>
+            </div>
+            <div class="small-4 text-center columns menu">
+              <a href="http://codepen.io/AJSIM/"><i class="fa fa-codepen fa-5x FA_Icon"></i><a/>
+            </div>
+            <div class="small-4 text-center columns menu">
+              <a href="https://adamsimonini.com/"><i class="fa fa-user-o fa-5x FA_Icon"></i><a/>
+        </div>
+      </div>
 
   </body>
 
