--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -48,16 +48,36 @@
     <br>
     <br>
 
-  <!-- Using Foundation ROW That Adjusts With Screen Size-->
-    <div class="row">
-        <div class="small-2 columns">
+  <!-- ICON Bar for filtering via game-->
+    <div class="row text-center">
+        <div class="small-1 columns">
         </div>
-        <div id="#" class="small-8 columns">
+        <div class="small-1 small-offset-3 columns"> <button> Overwatch </button>
+        </div>
+        <div class="small-1 columns"> LoL
+        </div>
+        <div class="small-1 columns"> DotA
+        </div>
+        <div class="small-1 columns"> CS:GO
+        </div>
+        <div class="small-1 columns"> Hearthstone
+        </div>
+        <div class="small-1 columns"> Coding
         </div>
         <div class="small-2 columns">
         </div>
     </div>
     <br>
+
+    <!-- Search Field -->
+    <div class="row text-center">
+      <div class="small-1 columns">
+      </div>
+      <input class="small-6 columns small-offset-3 text-center" placeholder="search here">
+      </input>
+      <div class="small-2 columns">
+      </div>
+    </div>
 
   <!-- Display Results of Search in Columns-->
     <div class="row text-center">
