Added Font, Icons, Images & CSS
Further styling

--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -42,7 +42,7 @@
     <br>
     <div class="row">
       </div class="small-12 columns">
-        <h1 class="text-center"> Twitch Channel Status </h1>
+        <h1 class="text-center"> twitch <i class="fa fa-twitch fa-1x FA_Icon"></i> status </h1>
       </div>
     </div>
     <br>
@@ -50,21 +50,21 @@
 
   <!-- ICON Bar for filtering via game-->
     <div class="row text-center">
-        <div class="small-1 columns">
+        <div class="large-1 small-1 columns">
         </div>
-        <div class="small-1 small-offset-3 columns"> <button> Overwatch </button>
+        <div class="large-1 small-2 large-offset-3 small-offset-0 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/overwatch_n73nxt.png">
         </div>
-        <div class="small-1 columns"> LoL
+        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/league_audzul.png">
         </div>
-        <div class="small-1 columns"> DotA
+        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/DotA2_hzmigg.png">
         </div>
-        <div class="small-1 columns"> CS:GO
+        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/counterstrike_a7zlz6.png">
         </div>
-        <div class="small-1 columns"> Hearthstone
+        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491519890/hearthstone_vyd71n.png">
         </div>
-        <div class="small-1 columns"> Coding
+        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/coding2_ykyefl.png">
         </div>
-        <div class="small-2 columns">
+        <div class="large-1 small-0 columns logo">
         </div>
     </div>
     <br>
@@ -107,14 +107,15 @@
     </div>
 
   <!-- SOCIAL ICONS   -->
+  <br>
       <div class="row">
-            <div class="small-4 text-center small columns menu">
+            <div class="small-4 text-center small columns social">
               <a href="https://github.com/collabitron"> <i class="fa fa-github fa-5x FA_Icon" ></i><a/>
             </div>
-            <div class="small-4 text-center columns menu">
+            <div class="small-4 text-center columns social">
               <a href="http://codepen.io/AJSIM/"><i class="fa fa-codepen fa-5x FA_Icon"></i><a/>
             </div>
-            <div class="small-4 text-center columns menu">
+            <div class="small-4 text-center columns social">
               <a href="https://adamsimonini.com/"><i class="fa fa-user-o fa-5x FA_Icon"></i><a/>
         </div>
       </div>
