--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 
-
-
 <html>
-
 
   <head>
     <meta charset="utf-8">
@@ -41,8 +38,12 @@
     <br>
     <br>
     <div class="row">
-      </div class="small-12 columns">
+      <div class="large-0 small-0 columns">
+      </div>
+    </div class="large-12 small-11 small-centered columns">
         <h1 class="text-center"> twitch <i class="fa fa-twitch fa-1x FA_Icon"></i> status </h1>
+      </div>
+      <div class="large-0 small-0 columns">
       </div>
     </div>
     <br>
@@ -52,11 +53,11 @@
     <div class="row text-center">
         <div class="large-1 small-1 columns">
         </div>
-        <div class="large-1 small-2 large-offset-3 small-offset-0 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/overwatch_n73nxt.png">
+        <div class="large-1 small-2 large-offset-3 small-offset-0 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/overwatch_n73nxt.png" style="width:95%; height:95%;">
         </div>
-        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/league_audzul.png">
+        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/league_audzul.png" style="width:95%; height:95%;">
         </div>
-        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/DotA2_hzmigg.png">
+        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/DotA2_hzmigg.png" style="width:95%; height:95%;">
         </div>
         <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/counterstrike_a7zlz6.png">
         </div>
@@ -73,7 +74,7 @@
     <div class="row text-center">
       <div class="small-1 columns">
       </div>
-      <input class="small-6 columns small-offset-3 text-center" placeholder="search here">
+      <input class="small-6 columns small-offset-3 text-center" placeholder="search channel by name">
       </input>
       <div class="small-2 columns">
       </div>
