Functioning JSONP Request
Extracting Data from JSONP. Beginning work of converying data in
stylized form

--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -81,6 +81,21 @@
     </div>
 
   <!-- Display Results of Search in Columns-->
+
+
+    <div class="row text-center">
+      <div class="small-1 columns">
+      </div>
+      <div id="logo" class="small-1 columns small-offset-3 "> 
+      </div>
+      <div id="test" class="small-5 small-offset-4 columns">
+      </div>
+      <div class="small-2 columns">
+      </div>
+    </div>
+
+
+
     <div class="row text-center">
       <div id="keyword1" class="small-2 columns"></div>
       <div id="description1" class="small-8 columns"></div>
