--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -53,19 +53,19 @@
     <div class="row text-center">
         <div class="large-1 small-1 columns">
         </div>
-        <div class="large-1 small-2 large-offset-3 small-offset-0 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/overwatch_n73nxt.png" style="width:95%; height:95%;">
+        <div class="large-1 small-2 large-offset-3 small-offset-0 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/overwatch_n73nxt.png" style="width:95%; height:95%;">
         </div>
-        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/league_audzul.png" style="width:95%; height:95%;">
+        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/league_audzul.png" style="width:95%; height:95%;">
         </div>
-        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/DotA2_hzmigg.png" style="width:95%; height:95%;">
+        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/DotA2_hzmigg.png" style="width:95%; height:95%;">
         </div>
-        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/counterstrike_a7zlz6.png">
+        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/counterstrike_a7zlz6.png">
         </div>
-        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491519890/hearthstone_vyd71n.png">
+        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491519890/hearthstone_vyd71n.png">
         </div>
-        <div class="large-1 small-2 columns logo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/coding2_ykyefl.png">
+        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/coding2_ykyefl.png">
         </div>
-        <div class="large-1 small-0 columns logo">
+        <div class="large-1 small-0 columns gameLogo">
         </div>
     </div>
     <br>
@@ -79,22 +79,114 @@
       <div class="small-2 columns">
       </div>
     </div>
+<br>
 
+<!--The Master Div That Will House All Dynamically Created Divs-->
+
+  <div id="masterDiv">
+
+  </div>
   <!-- Display Results of Search in Columns-->
 
-
-    <div class="row text-center">
-      <div class="small-1 columns">
-      </div>
-      <div id="logo" class="small-1 columns small-offset-3 "> 
-      </div>
-      <div id="test" class="small-5 small-offset-4 columns">
-      </div>
-      <div class="small-2 columns">
-      </div>
+  <div class="row text-center">
+    <div class="large-1 columns large-offset-3">
+      <a id="logolink1" href="" target="_blank"><img id="logo1" class="channelLogo" src=""></a>
     </div>
+    <div id="name1" class="large-4 columns" style="border-style:solid;"></div>
+    <div class="large-1 columns small-offset-0">
+      <img src="http://res.cloudinary.com/redkasa/image/upload/v1491615507/580b57fcd9996e24bc43c540_sfri3x.png">
+    </div>
+    <div class="large-1 columns small-offset-0"></div>
+  </div>
+  <div class="row text-center">
+      <div id="status1" class="large-4 large-offset-4 columns" style="border-style:solid;"></div>
+  </div>
+
+  <br>
+  <br>
+
+<!-- Status Div To Be Included Back In
+  <div id="status1" style="border-style:solid;" class="small-2 small-offset-0 columns">
+  </div>
 
 
+-->
+  <div class="row text-center">
+    <div class="small-1 columns">
+    </div>
+    <div class="small-1 columns small-offset-3">
+        <img id="logo3" class="channelLogo" src="http://vignette2.wikia.nocookie.net/yugioh/images/c/c3/PumpkingtheKingofGhosts-MRD-EN-C-UE.png/revision/latest?cb=20150508171121">
+    </div>
+      <div id="name3" style="border-style:solid;" class="small-5 small-offset-0 columns">
+      </div>
+      <div id="status3" style="border-style:solid;" class="small-5 small-offset-0 columns">
+      </div>
+    <div class="small-2 columns">
+    </div>
+  </div>
+  <br>
+
+  <div class="row text-center">
+    <div class="small-1 columns">
+    </div>
+    <div class="small-1 columns small-offset-3">
+        <img id="logo2" class="channelLogo" src="http://vignette2.wikia.nocookie.net/yugioh/images/c/c3/PumpkingtheKingofGhosts-MRD-EN-C-UE.png/revision/latest?cb=20150508171121">
+    </div>
+      <div id="name2" style="border-style:solid;" class="small-5 small-offset-0 columns">
+      </div>
+      <div id="status2" style="border-style:solid;" class="small-5 small-offset-0 columns">
+      </div>
+    <div class="small-2 columns">
+    </div>
+  </div>
+  <br>
+
+  <div class="row text-center">
+    <div class="small-1 columns">
+    </div>
+    <div class="small-1 columns small-offset-3">
+        <img id="logo2" class="channelLogo" src="http://vignette2.wikia.nocookie.net/yugioh/images/c/c3/PumpkingtheKingofGhosts-MRD-EN-C-UE.png/revision/latest?cb=20150508171121">
+    </div>
+      <div id="name2" style="border-style:solid;" class="small-5 small-offset-0 columns">
+      </div>
+      <div id="status2" style="border-style:solid;" class="small-5 small-offset-0 columns">
+      </div>
+    <div class="small-2 columns">
+    </div>
+  </div>
+  <br>
+
+  <div class="row text-center">
+    <div class="small-1 columns">
+    </div>
+    <div class="small-1 columns small-offset-3">
+        <img id="logo2" class="channelLogo" src="http://vignette2.wikia.nocookie.net/yugioh/images/c/c3/PumpkingtheKingofGhosts-MRD-EN-C-UE.png/revision/latest?cb=20150508171121">
+    </div>
+      <div id="name2" style="border-style:solid;" class="small-5 small-offset-0 columns">
+      </div>
+      <div id="status2" style="border-style:solid;" class="small-5 small-offset-0 columns">
+      </div>
+    <div class="small-2 columns">
+    </div>
+  </div>
+  <br>
+
+<!--Beta
+
+<div class="row text-center">
+  <div class="small-1 columns">
+  </div>
+  <div class="small-1 columns small-offset-3">
+      <img id="logo" class="channelLogo" src="">
+  </div>
+    <div id="name" style="border-style:solid;" class="small-5 small-offset-0 columns">
+    </div>
+    <div id="status" style="border-style:solid;" class="small-5 small-offset-0 columns">
+    </div>
+  <div class="small-2 columns">
+  </div>
+</div>
+<br>
 
     <div class="row text-center">
       <div id="keyword1" class="small-2 columns"></div>
@@ -121,6 +213,8 @@
       <div id="description5" class="small-8 columns"></div>
       <div class="small-2 columns"></div>
     </div>
+
+-->
 
   <!-- SOCIAL ICONS   -->
   <br>
