--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -55,9 +55,9 @@
         </div>
         <div class="large-1 small-2 large-offset-3 small-offset-0 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/overwatch_n73nxt.png" style="width:95%; height:95%;">
         </div>
-        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/league_audzul.png" style="width:95%; height:95%;">
+        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/league_audzul.png" style="width:93%; height:93%;">
         </div>
-        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/DotA2_hzmigg.png" style="width:95%; height:95%;">
+        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491662365/SC2g_uegjgc.png">
         </div>
         <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/counterstrike_a7zlz6.png">
         </div>
@@ -97,6 +97,9 @@
 
 
 -->
+
+<!--Beta
+
   <div class="row text-center">
     <div class="small-1 columns">
     </div>
@@ -157,7 +160,7 @@
   </div>
   <br>
 
-<!--Beta
+
 
 <div class="row text-center">
   <div class="small-1 columns">
