--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -53,19 +53,19 @@
     <div class="row text-center">
         <div class="large-1 small-1 columns">
         </div>
-        <div class="large-1 small-2 large-offset-3 small-offset-0 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/overwatch_n73nxt.png" style="width:95%; height:95%;">
-        </div>
-        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/league_audzul.png" style="width:93%; height:93%;">
-        </div>
-        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491662365/SC2g_uegjgc.png">
-        </div>
-        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/counterstrike_a7zlz6.png">
-        </div>
-        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491519890/hearthstone_vyd71n.png">
-        </div>
-        <div class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/coding2_ykyefl.png">
-        </div>
-        <div class="large-1 small-0 columns gameLogo">
+        <button id="overwatchLogo" type="button" class="large-1 small-2 large-offset-3 small-offset-0 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/overwatch_n73nxt.png" style="width:95%; height:95%;">
+        </button>
+        <button id="LoLLogo" type="button" class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/league_audzul.png" style="width:93%; height:93%;">
+        </button>
+        <button id="SC2Logo" type="button" class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491662365/SC2g_uegjgc.png">
+        </button>
+        <button id="CSLogo" type="button" class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515624/counterstrike_a7zlz6.png">
+        </button>
+        <button id="HearthstoneLogo" type="button" class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491519890/hearthstone_vyd71n.png">
+        </button>
+        <button id="CodingLogo" type="button" class="large-1 small-2 columns gameLogo"> <img src="http://res.cloudinary.com/redkasa/image/upload/v1491515625/coding2_ykyefl.png">
+        </button>
+        <div type="button" class="large-1 small-0 columns">
         </div>
     </div>
     <br>
@@ -91,121 +91,8 @@
   <br>
   <br>
 
-<!-- Status Div To Be Included Back In
-  <div id="status1" style="border-style:solid;" class="small-2 small-offset-0 columns">
-  </div>
 
-
--->
-
-<!--Beta
-
-  <div class="row text-center">
-    <div class="small-1 columns">
-    </div>
-    <div class="small-1 columns small-offset-3">
-        <img id="logo5" class="channelLogo" src="http://vignette2.wikia.nocookie.net/yugioh/images/c/c3/PumpkingtheKingofGhosts-MRD-EN-C-UE.png/revision/latest?cb=20150508171121">
-    </div>
-      <div id="name5" style="border-style:solid;" class="small-5 small-offset-0 columns">
-      </div>
-      <div id="status5" style="border-style:solid;" class="small-5 small-offset-0 columns">
-      </div>
-    <div class="small-2 columns">
-    </div>
-  </div>
-  <br>
-
-  <div class="row text-center">
-    <div class="small-1 columns">
-    </div>
-    <div class="small-1 columns small-offset-3">
-        <img id="logo2" class="channelLogo" src="http://vignette2.wikia.nocookie.net/yugioh/images/c/c3/PumpkingtheKingofGhosts-MRD-EN-C-UE.png/revision/latest?cb=20150508171121">
-    </div>
-      <div id="name2" style="border-style:solid;" class="small-5 small-offset-0 columns">
-      </div>
-      <div id="status2" style="border-style:solid;" class="small-5 small-offset-0 columns">
-      </div>
-    <div class="small-2 columns">
-    </div>
-  </div>
-  <br>
-
-  <div class="row text-center">
-    <div class="small-1 columns">
-    </div>
-    <div class="small-1 columns small-offset-3">
-        <img id="logo4" class="channelLogo" src="http://vignette2.wikia.nocookie.net/yugioh/images/c/c3/PumpkingtheKingofGhosts-MRD-EN-C-UE.png/revision/latest?cb=20150508171121">
-    </div>
-      <div id="name4" style="border-style:solid;" class="small-5 small-offset-0 columns">
-      </div>
-      <div id="status4" style="border-style:solid;" class="small-5 small-offset-0 columns">
-      </div>
-    <div class="small-2 columns">
-    </div>
-  </div>
-  <br>
-
-  <div class="row text-center">
-    <div class="small-1 columns">
-    </div>
-    <div class="small-1 columns small-offset-3">
-        <img id="logo3" class="channelLogo" src="http://vignette2.wikia.nocookie.net/yugioh/images/c/c3/PumpkingtheKingofGhosts-MRD-EN-C-UE.png/revision/latest?cb=20150508171121">
-    </div>
-      <div id="name3" style="border-style:solid;" class="small-5 small-offset-0 columns">
-      </div>
-      <div id="status3" style="border-style:solid;" class="small-5 small-offset-0 columns">
-      </div>
-    <div class="small-2 columns">
-    </div>
-  </div>
-  <br>
-
-
-
-<div class="row text-center">
-  <div class="small-1 columns">
-  </div>
-  <div class="small-1 columns small-offset-3">
-      <img id="logo" class="channelLogo" src="">
-  </div>
-    <div id="name" style="border-style:solid;" class="small-5 small-offset-0 columns">
-    </div>
-    <div id="status" style="border-style:solid;" class="small-5 small-offset-0 columns">
-    </div>
-  <div class="small-2 columns">
-  </div>
-</div>
-<br>
-
-    <div class="row text-center">
-      <div id="keyword1" class="small-2 columns"></div>
-      <div id="description1" class="small-8 columns"></div>
-      <div class="small-2 columns"></div>
-    </div>
-    <div class="row text-center">
-      <div id="keyword2" class="small-2 columns"></div>
-      <div id="description2" class="small-8 columns"></div>
-      <div class="small-2 columns"></div>
-    </div>
-    <div class="row text-center">
-      <div id="keyword3" class="small-2 columns"></div>
-      <div id="description3" class="small-8 columns"></div>
-      <div class="small-2 columns"></div>
-    </div>
-    <div class="row text-center">
-      <div id="keyword4" class="small-2 columns"></div>
-      <div id="description4" class="small-8 columns"></div>
-      <div class="small-2 columns"></div>
-    </div>
-    <div class="row text-center">
-      <div id="keyword5" class="small-2 columns"></div>
-      <div id="description5" class="small-8 columns"></div>
-      <div class="small-2 columns"></div>
-    </div>
-
--->
-
-  <!-- SOCIAL ICONS   -->
+<!-- SOCIAL ICONS   -->
   <br>
       <div class="row">
             <div class="small-4 text-center small columns social">
