--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -41,7 +41,7 @@
       <div class="large-0 small-0 columns">
       </div>
     </div class="large-12 small-11 small-centered columns">
-        <h1 class="text-center"> twitch <i class="fa fa-twitch fa-1x FA_Icon"></i> status </h1>
+        <h1 class="text-center"> twitch <a href="https://www.twitch.tv/" target="_blank"><i class="fa fa-twitch fa-1x FA_Icon"></i></a> status </h1>
       </div>
       <div class="large-0 small-0 columns">
       </div>
