Aesthetic Update. Search
Search fully completed. Further styled borders. Only need to adjust
online/offline status icons.

--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -10,6 +10,9 @@
 
     <title> Twitch Channel Status </title>
 
+    <!-- Tab Icon -->
+    <link rel="icon" href="http://res.cloudinary.com/redkasa/image/upload/v1491615507/580b57fcd9996e24bc43c540_sfri3x.png">
+
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
