updated relative path

--- a/TwitchAppHTML.htm
+++ b/TwitchAppHTML.htm
@@ -27,8 +27,8 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
       <!-- Custom JS & CSS -->
-      <script src = "C:\Users\Adam's Laptop\Google Drive\JSProjects\TwitchApp\TwitchAppJS.js"></script>
-      <link rel="stylesheet" href="C:\Users\Adam's Laptop\Google Drive\JSProjects\TwitchApp\TwitchAppCSS.css">
+      <script src = "./twitchAppJS.js"></script>
+      <link rel="stylesheet" href="./TwitchAppCSS.css">
 
       <!-- Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
